--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -5,14 +5,6 @@
             Schul-Cloud</a>
             <ul class="nav navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">
-                    Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/login/">
-                    Login</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="https://blog.schul-cloud.org/" target="_blank">Blog</a>
                 </li>
                 <li class="nav-item">
@@ -20,7 +12,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://hpi.de/open-campus/hpi-initiativen/schulcloud"
-                       target="_blank">About</a>
+                       target="_blank">über Schul-Cloud</a>
                 </li>
             </ul>
         </nav>
