--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -31,67 +31,64 @@
 
                 <div class="form-group">
                     <label>Aktuelles Passwort</label>
-                    <input type="password" name="password" class="form-control form-control-lg" placeholder="***************" required>
+                    <input type="password" name="password" class="form-control form-control-lg"
+                           placeholder="***************" required>
                 </div>
 
                 <div class="form-group">
                     <label>Neues Passwort</label>
-                    <input type="password" name="password_new" id="password_new" class="form-control form-control-lg" placeholder="***************" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
-                           title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl oder Sonderzeichen" >
+                    <input type="password" name="password_new" id="password_new" class="form-control form-control-lg"
+                           placeholder="***************"
+                           pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
+                           title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl oder Sonderzeichen">
                 </div>
 
                 <div class="form-group">
                     <label>Neues Passwort</label>
-                    <input type="password" name="password_control" id="password_control" class="form-control form-control-lg" placeholder="***************" >
+                    <input type="password" name="password_control" id="password_control"
+                           class="form-control form-control-lg" placeholder="***************">
                 </div>
 
                 <div class="form-group">
-                    <input type="submit" class="btn btn-primary" />
+                    <input type="submit" class="btn btn-primary"/>
                 </div>
             </form>
 
 
-            <input type="hidden" name="userId" value="{{userId}}" />
+            <input type="hidden" name="userId" value="{{userId}}"/>
         </div>
 
-        <div class="panel-group">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <a data-toggle="collapse" href="#collapse1"><h4><label>Benachrichtigungseinstellungen</label></h4></a>
-                </div>
-                <div id="collapse1" class="panel-collapse collapse">
-
-                    <div class="notification">
-                        {{#if device}}
-                        <table width="100%" cellpadding="5px">
-                            <thead>
-                            <th></th>
-                            <th><label>Name</label></th>
-                            <th><label>Typ</label></th>
-                            <th><label>Betriebssystem</label></th>
-                            </thead>
-                            <tbody>
-                            {{#each device}}
-                                <tr id="{{this._id}}">
-                                    <td>{{#if this.selected}}<a href="/account/settings/device"
-                                           target="_blank"
-                                           data-method="delete"
-                                           data-device-name="{{this.name}}"
-                                           data-device-id="{{this.token}}">
-                                        <i class="fa fa-trash-o"></i></a>
-                                    {{/if}}</td>
-                                    <td class="form-group">{{this.name}}</td>
-                                    <td class="form-group">{{this.type}}</td>
-                                    <td class="form-group">{{this.OS}}</td>
-                                </tr>
-                            {{/each}}
-                            </tbody>
-                        </table>
-                    {{/if}}
-                        <button type="button" class="btn btn-default" onclick="pushManager.requestPermission()">Benachrichtigungen aktivieren</button>
-                    </div>
-                </div>
-            </div>
+        <div class="notification">
+            <h4><label>Benachrichtigungseinstellungen</label></h4>
+            {{#if device}}
+                <table width="100%" cellpadding="5px">
+                    <thead>
+                    <th></th>
+                    <th><label>Name</label></th>
+                    <th><label>Typ</label></th>
+                    <th><label>Betriebssystem</label></th>
+                    </thead>
+                    <tbody>
+                    {{#each device}}
+                        <tr id="{{this._id}}">
+                            <td>{{#if this.selected}}<a href="/account/settings/device"
+                                                        target="_blank"
+                                                        data-method="delete"
+                                                        data-device-name="{{this.name}}"
+                                                        data-device-id="{{this.token}}">
+                                <i class="fa fa-trash-o"></i></a>
+                            {{/if}}</td>
+                            <td class="form-group">{{this.name}}</td>
+                            <td class="form-group">{{this.type}}</td>
+                            <td class="form-group">{{this.OS}}</td>
+                        </tr>
+                    {{/each}}
+                    </tbody>
+                </table>
+            {{/if}}
+            <button type="button" class="btn btn-default" onclick="pushManager.requestPermission()">Benachrichtigungen
+                aktivieren
+            </button>
         </div>
 
         {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
