--- a/views/calendar/calendar.hbs
+++ b/views/calendar/calendar.hbs
@@ -18,5 +18,11 @@
         <div class="route-calendar">
             <div class="fullcalendar" id="calendar"></div>
         </div>
+
+        {{#embed "lib/components/modal-form" class="create-event-modal"}}
+            {{#content "fields"}}
+                {{> "calendar/forms/form-create-event"}}
+            {{/content}}
+        {{/embed}}
     {{/content}}
 {{/extend}}
